RESOLVED: http://almas.unl.edu:8080/browse/DIDC-11

--- a/src/main/webapp/resources/styles/main.css
+++ b/src/main/webapp/resources/styles/main.css
@@ -244,3 +244,10 @@ border:4px solid #ffffff;
 #datepicker {
 	margin-top: 50px;
 }
+
+#plist {
+	list-style:  none;
+}
+
+#plist li { margin-bottom: 10px; }
+
