--- a/src/main/webapp/resources/templates/app.xhtml
+++ b/src/main/webapp/resources/templates/app.xhtml
@@ -41,7 +41,7 @@
 		</div>
         <div class="rightCol" align="left">
         <!-- main navigation -->
-			<div class="search"><form><input type="text" /></form></div>
+			<!-- <div class="search"><form><input type="text" /></form></div> -->
 	        <img src="../resources/images/template/logoText.png" alt="the Aurora Project" border="0" />
 		</div>
         <div style="clear:both"></div>
@@ -98,7 +98,7 @@
 				</ul></li>
 	 		</ul>        
 	         
-	       <p> &copy; 2011 All Rights Reserved. William G. Thomas, III, Richard G. Healey, UNL Computer Science and Engineering.  <a href="">Creative Commons CC BY-SA</a>
+	       <p> &copy; 2011 All Rights Reserved. William G. Thomas, III, Richard G. Healey, Ian J. Cottingham, the University of Nebraska Board of Regents.  <a href="">Creative Commons CC BY-SA</a>
 	       		<br />
 	            <img src="resources/images/template/cc.jpg" alt="creative commons" /><br /><br />
 	            <img src="resources/images/template/digging.jpg" alt="digging into data" /><br />
