--- a/src/main/webapp/resources/styles/main.css
+++ b/src/main/webapp/resources/styles/main.css
@@ -263,3 +263,5 @@ border:4px solid #ffffff;
 
 #textSection ul { list-style: none; }
 #textSection ul li { margin-bottom: 10px; }
+
+th { text-align: left; }
