--- a/src/main/webapp/resources/templates/app.xhtml
+++ b/src/main/webapp/resources/templates/app.xhtml
@@ -92,8 +92,8 @@
 	            <ul>
 	        		<li><a href="railroads.xhtml">Railroad Network Connectivity</a></li>
 	        		<li><a href="dailydispatch.xhtml">The Civil War and Mobility</a></li>
-     				<li><a href="./web/population.xhtml">Slavery and the Expansion of the Railroad</a></li>
-	        		<li><a href="">The Politics of Railroad Expansion</a></li>
+     				<li><a href="population.xhtml">Slavery and the Expansion of the Railroad</a></li>
+	        		<li><a href="politics.xhtml">The Politics of Railroad Expansion</a></li>
 	        		<li><a href="freedman.xhtml">African American Mobility after Emancipation</a></li>
 				</ul></li>
 	 		</ul>        
