Updated data pages to include descriptions and citations

--- a/src/main/webapp/resources/styles/main.css
+++ b/src/main/webapp/resources/styles/main.css
@@ -265,3 +265,11 @@ border:4px solid #ffffff;
 #textSection ul li { margin-bottom: 10px; }
 
 th { text-align: left; }
+
+.desc {
+    width: 70%;
+}
+
+.db {
+    width: 100%;
+}
